--- a/_data/teams.yml
+++ b/_data/teams.yml
@@ -14,6 +14,22 @@ drugdealers:
       name: peter
       
   description: >
-    Hey, you want some crazy drugs? Here comes a BIRD VISUAL NOVEL!
+    Hey, do you want some "illegal" substances? Here comes a bird matin... dating simulator!
     Welcome to Team Drug Dealers!
+    
+gaymingindustries:
+  name: Gay-ming Industries
+  
+  members:
+  -
+    name: levi
+  -
+    name: robert
+  -
+    name: connor
+  -
+    name: myles
+    
+  description: > 
+    Time for Gay-ming!!! ^superhappyfuntime^
     
